# lightdm-another-gtk-greeter-settings

./: Makefile.am  configure.ac
data/: Makefile.am  interface.ui  lightdm-another-gtk-greeter-settings.desktop.in  lightdm-another-gtk-greeter.conf
po/: POTFILES.in  default.pot  ru.po
src/: Makefile.am  lightdm-another-gtk-greeter-settings.in
src/application/: Makefile.am  main.py
